--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "express": "^4.17.1",
     "express-session": "^1.17.1",
     "nodemon": "^2.0.7",
-    "pug": "^2.0.4"
+    "passport": "^0.4.1",
+    "passport-local": "^1.0.0",
+    "pug": "^3.0.2"
   }
 }
